<resources>
    <string name="app_name">Amar Batch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="clicked">Clicked</string>
    <string name="content_description">content_description</string>
    <string name="not_implemented">Not Implemented</string>
    <string name="phone">Phone</string>
    <string name="sww">Something went wrong</string>
    <string name="thankyou">\"Thank You, \"</string>
    <string name="wrong_credentials">Wrong Credentials</string>
</resources>